# usb-serial-for-android

./: CMakeLists.txt  build.gradle  package.xml
usbSerialForAndroid/: build.gradle
